--- a/anits-axiomio/index.html
+++ b/anits-axiomio/index.html
@@ -43,29 +43,29 @@
       <TABLE>
         <TR><TD>	Status	</TD><TD> Name	</TD></TR>
         <TR><TD> ~~~~~~~~~ </TD><TD>~~~~~~~~~~~~~~~~~~~~~~~~~~</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	BHARATH	BOLLU	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Divyanth Ramnath	Darsi	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Kiran Kumar	G	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Kotaiah Chowdary	R	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Lokesh Kumar	Simma	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Madhu Nitesh	Bandi	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Manikanta	Ponduri	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Manojkumar	Madhavarapu	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Mohan Manikanta Sai	Dasari	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	Mohan Manoj	Pentakota	</TD></TR>
-        <TR><TD>	Aug14th	</TD><TD>	RIYAZ ALI	MOHAMMAD	</TD></TR>
-        <TR><TD>	3:00 PM	</TD><TD>	Rohitha	Polamarasetty	</TD></TR>
-        <TR><TD>	3:00 PM	</TD><TD>	S.M.Sricharan	K	</TD></TR>
-        <TR><TD>	10:00 AM	</TD><TD>	Sai Chaitanya Reddy	Neelapu	</TD></TR>
-        <TR><TD>	11:00 AM	</TD><TD>	Sai Charan	Gangu	</TD></TR>
-        <TR><TD>	11:15 AM	</TD><TD>	SAI PRAVEEN	VAJAPEYAYAJULA	</TD></TR>
-        <TR><TD>	10:15 AM	</TD><TD>	SATYA SAI PRAVEEN	KANTA	</TD></TR>
-        <TR><TD>	12:00	</TD><TD>	Somasekhar	Illa	</TD></TR>
-        <TR><TD>	12:00	</TD><TD>	SRAVANI	VANTAKULA	</TD></TR>
-        <TR><TD>	1:00 PM	</TD><TD>	Sri Harsha	Boddeti	</TD></TR>
+        <TR><TD>	2:00 PM	</TD><TD>	BHARATH	BOLLU	</TD></TR>
+        <TR><TD>	2:30 PM	</TD><TD>	Divyanth Ramnath	Darsi	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	Kiran Kumar	G	</TD></TR>
+        <TR><TD>	Aug15th	</TD><TD>	Kotaiah Chowdary	R	</TD></TR>
+        <TR><TD>	11:00 AM	</TD><TD>	Lokesh Kumar	Simma	</TD></TR>
+        <TR><TD>	Aug15th	</TD><TD>	Madhu Nitesh	Bandi	</TD></TR>
+        <TR><TD>	10:00 AM	</TD><TD>	Manikanta	Ponduri	</TD></TR>
+        <TR><TD>	10:30 AM	</TD><TD>	Manojkumar	Madhavarapu	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	Mohan Manikanta Sai	Dasari	</TD></TR>
+        <TR><TD>	Aug15th	</TD><TD>	Mohan Manoj	Pentakota	</TD></TR>
+        <TR><TD>	11:30 AM	</TD><TD>	RIYAZ ALI	MOHAMMAD	</TD></TR>
+        <TR><TD>	10:00 AM	</TD><TD>	Rohitha	Polamarasetty	</TD></TR>
+        <TR><TD>	Aug15th	</TD><TD>	S.M.Sricharan	K	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	Sai Chaitanya Reddy	Neelapu	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	Sai Charan	Gangu	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	SAI PRAVEEN	VAJAPEYAYAJULA	</TD></TR>
+        <TR><TD>	DONE	</TD><TD>	SATYA SAI PRAVEEN	KANTA	</TD></TR>
+        <TR><TD>	12:00 PM	</TD><TD>	Somasekhar	Illa	</TD></TR>
+        <TR><TD>	Aug15th	</TD><TD>	SRAVANI	VANTAKULA	</TD></TR>
+        <TR><TD>	12:30 PM	</TD><TD>	Sri Harsha	Boddeti	</TD></TR>
         <TR><TD>	1:00 PM	</TD><TD>	Tanooja	Kosuru	</TD></TR>
-        <TR><TD>	4:00 PM	</TD><TD>	Venkata Sai	Kuniganti	</TD></TR>
-        <TR><TD>	4:00 PM	</TD><TD>	Vikram Krishna Varma	Mandapati	</TD></TR>
+        <TR><TD>	1:30 PM	</TD><TD>	Venkata Sai	Kuniganti	</TD></TR>
+        <TR><TD>	10:00 AM	</TD><TD>	Vikram Krishna Varma	Mandapati	</TD></TR>
         <TR><TD>	DONE	</TD><TD>	Viswamohan	Dantuluri	</TD></TR>
         </TABLE>
       <br>
