Off-Campuse drive, created registration link.

--- a/reg-apxor/index.html
+++ b/reg-apxor/index.html
@@ -9,26 +9,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Interview42: </title>
+  <title>Apxor Off-Campus Drive</title>
 
-  <meta name="description" content="Interview to identify developer in student" />
+  <meta name="description" content="Dec 26th 2022. Registration form" />
 
-  <!-- <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image" content="https://interview42.com/assets/general/social-hero.png" />
-  <meta property="og:image" content="https://interview42.com/assets/general/social-hero.png" /> -->
+  <meta property="og:title" content="Apxor Off-Campus Drive" />
 
-  <meta property="og:title" content="Interview42" />
+  <meta property="og:description" content="Dec 26th 2022. Registration form" />
 
-  <meta property="og:description" content="Interview to identify developer in student" />
-
-  <meta property="og:url" content="https://interview42.com/" />
+  <meta property="og:url" content="https://interview42.com/reg-apxor/" />
 
   <link rel="stylesheet" type="text/css" href="/assets/main.css" />
 
   <link rel="preload" href="/assets/SourceSansVariable-Subset.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/assets/SourceSansVariableItalic-Subset.woff2" as="font" type="font/woff2" crossorigin />
 
-  <link rel="canonical" href="https://interview42.com/" />
+  <link rel="canonical" href="https://interview42.com/reg-apxor/" />
+  
+  <meta http-equiv="refresh" content="3; URL=https://docs.google.com/forms/d/e/1FAIpQLScS-92e6VcOQ4pWX_Xs1WIDLJ2PBXzejXJuP7rJuFB0m4y6Kw/viewform?usp=sf_link" />
 
   </head>
 
@@ -36,8 +34,12 @@
 
   <main id="content" class="grid fade-in">
     <section class="txt-heavy">
-      <h2>Interview42</h2>
-      <h3>Platform for <br>Conducting interviews <br> at Scale</h3>
+      <h2>Apxor Off-Campus Drive</h2>
+      <h4>Dec 26th 2022</h4>
+      
+      <br>
+      <br>
+      Registration form loading...
       <br>
     </section>
     
