--- a/reg-apxor/index.html
+++ b/reg-apxor/index.html
@@ -17,6 +17,8 @@
 
   <meta property="og:description" content="Dec 26th 2022. Registration form" />
 
+  <meta property="og:image" content="https://uploads-ssl.webflow.com/5f7ae188ef1b6b55e708dbdb/624c7f1edb9c1c5349c5a657_apxor-dark-logo.jpg"/>
+
   <meta property="og:url" content="https://interview42.com/reg-apxor/" />
 
   <link rel="stylesheet" type="text/css" href="/assets/main.css" />
